--- a/index.html
+++ b/index.html
@@ -5,5 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Let's Play: Rock, Paper & Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <div id="content">
+      <div id="images">
+        <img
+          src="/RockPaperScissors/images/img_rock.png"
+          alt="ROCK"
+          class="image"
+        />
+        <img
+          src="/RockPaperScissors/images/img_scissors.png"
+          alt="ROCK"
+          class="image"
+        />
+        <img
+          src="/RockPaperScissors/images/img_paper.png"
+          alt="ROCK"
+          class="image"
+        />
+      </div>
+      <div id="scores">
+        <h1 id="scoreY">0</h1>
+        <h1 id="scoreC">0</h1>
+      </div>
+      <div id="players">
+        <h3 id="plY">You</h3>
+        <h3 id="plC">Comp</h3>
+      </div>
+      <div id="result">Pick your move and let the game start!!</div>
+    </div>
+  </body>
 </html>
