--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
         src="/RockPaperScissors/images/img_rock.png"
         alt="ROCK"
         class="image"
+        id="rock"
       />
       <img
         src="/RockPaperScissors/images/img_scissors.png"
         alt="ROCK"
         class="image"
+        id="scissors"
       />
+
       <img
         src="/RockPaperScissors/images/img_paper.png"
         alt="ROCK"
         class="image"
+        id="paper"
       />
     </div>
     <div id="scores">
@@ -36,7 +40,9 @@
       <h3 id="playerC" class="common">Comp</h3>
     </div>
     <div id="result">
-      <h2 id="resulttext">Pick your move and let the game start!!</h2>
+      <h2 id="resulttext" class="draw">
+        Pick your move and let the game start!!
+      </h2>
     </div>
 
     <script src="script.js"></script>
